# MIPT-Algorithms

./: 0.cpp  20160923.cpp  20161007.cpp  20161007_2.cpp  20161014.cpp  20161014_2.cpp  Move semantics & perfect forwarding  debug.h
1 20160222 Теория динамика/: 5
1 asm/: hello.asm
1 Взаимное исключение/: Ticket Spinlock.txt  Tricky Mutex.txt
2 20160229 Splay with next_permutation on a subsegment/: GeneratorBigJumps.h  GeneratorOperations.h  IGenerator.h  SplayOperations.h  VectorStruct.h  base.h  iStruct.h  main.cpp  splayStruct.h  vectorStruct.h
2 Flows/: A.cpp  A_incomplete.cpp  B.tex  C.cpp  Cslow.cpp  D.cpp  E.cpp  F.cpp  generator.cpp  input.txt  stress.sh
2 ray tracing/: CMakeLists.txt  geometry.h  light.h  main.cpp  material.h  matrix.h  objects.h  pretty_print.h  random.h  ray_tracing.h  rt.h
2 ray tracing/examples/: format_description.rt  spheres.rt  triangles.rt
2 ray tracing/examples2/: input.rt
2 ray tracing/rt/: example2.rt  format_description.rt  main.rt  quadrangles.rt  reflection.rt  spheres.rt  triangles.rt
3 20160309 Теория динамика/: 2  2dp  2dp.cpp  3fast.cpp
3 Synchronization/: barrier.h  robot_cv.cpp  robot_semaphore.cpp  semaphore.h  Блокирующий флаг.tex
3 allocator/: CMakeLists.txt  default.cpp  description.txt  main.cpp
4 20160321 Теория/: 3.tex
4 Flows/: Aslow.cpp  B.cpp  CMakeLists.txt  D.cpp  E.cpp  G_wrong.cpp  H.cpp  J.cpp  L_my.cpp  input.txt
5 20160404 НОП/: base.h  fast.h  input.txt  main  main.cpp  slow.h  slowCheck.h
5 Thread Pool/: CMakeLists.txt  main.cpp  parallel_sort.cpp  parallel_sort.h
(+175 files in other folders)
